adding data in gitignore

--- a/aqi-and-false-color-image.ipynb
+++ b/aqi-and-false-color-image.ipynb
@@ -48,6 +48,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1: Importing libraries and data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries and functions\n",
+    "import os # accessible file paths\n",
+    "import numpy as np # math operations\n",
+    "import pandas as pd # data manipulation & analysis\n",
+    "import geopandas as gpd # geospatial data manipulation\n",
+    "from shapely.geometry import Polygon\n",
+    "import xarray as xr # for n-dimmensional array data\n",
+    "import rioxarray as rioxr # for geospatial n-dimmensional array data\n",
+    "from rasterio.features import rasterize # for rasterizing polygons\n",
+    "# plotting\n",
+    "import matplotlib.pyplot as plt # for plotting\n",
+    "import matplotlib.patches as mpatches # for pretty legends\n",
+    "\n",
+    "# import AQI data\n",
+    "# using the pandas read_csv function\n",
+    "aqi_17 = pd.read_csv('https://aqs.epa.gov/aqsweb/airdata/daily_aqi_by_county_2017.zip')\n",
+    "aqi_18 = pd.read_csv('https://aqs.epa.gov/aqsweb/airdata/daily_aqi_by_county_2018.zip')\n",
+    "\n",
+    "# import landsat data\n",
+    "# using rasterio \n",
+    "# use the os to get the current working directory\n",
+    "land_fp = os.path.join(os.getcwd(),'data','landsat8-2018-01-26-sb-simplified.nc')\n",
+    "land = rioxr.open_rasterio(land_fp) # use this for geospatial raster data\n",
+    "\n",
+    "# second dataset: fire perimeters in California during 2017\n",
+    "# using geopandas\n",
+    "# use the os to get the current working directory\n",
+    "fire_fp = os.path.join(os.getcwd(),'data','California_Fire_Perimeters_2017','California_Fire_Perimeters_2017.shp')\n",
+    "fire = gpd.read_file(fire_fp) # use gpd to read the file because it's a shapefile\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
